xine-lib (1.1.17) 2009-??-??

xine-lib (1.1.16) 2009-01-07
  * Security fixes:
    - Heap overflow in Quicktime atom parsing.                 (CVE-2008-5234)
    - Multiple buffer overflows.                               (CVE-2008-5236)
    - Multiple integer overflows.                              (CVE-2008-5237)
    - Unchecked or incompletely-checked read function results. (CVE-2008-5239)
    - Unchecked malloc using untrusted values.  (CVE-2008-5240, CVE-2008-5242)
    - Integer underflow in qt compressed atom handling.        (CVE-2008-5241)
    - Buffer indexing using untrusted or unchecked values.     (CVE-2008-5243)
    - Integer overflows in the ffmpeg audio decoder and the CDDA server.
    - Heap buffer overflow in the ffmpeg video decoder.
    - Avoid segfault on invalid track type in Matroska files.
    - Avoid underflow (compressed atoms) in the Qt demuxer.
  * Fix reported compilation failures (with C++ programs).
  * Fix CDDB access in 64-bit builds.
  * Fix seeking FLV clips that don't specify the movie length in the headers.
  * Support H.264 and AAC streams within FLV.
  * Fix timing issues (broken audio) on mingw.
  * Add ID3 tag TDRC to replace/complement the deprecated tag TYER.
  * Add a new meta-tag, "Composer", and use it in the FLAC demuxer.
  * Correct AAC channel ordering for multi-channel audio, at least for FLAC
    when using ALSA or PulseAudio. (Needs a proper fix.)
  * Add position-based seeking independent from seekpoints.
  * Fix some XCB Xv attribute configuration breakage.
  * Add a configuration option for Xv bicubic filtering, implemented in
    xf86-video-ati 6.9.1.
  * Recognise Xv "blitter" adaptors for port selection purposes.
    NOTE: you will need to remove ~/.xine/catalog.cache when upgrading from
          xine-lib 1.1.15 or older if you wish to use this extra option.
  * Fix MMS media requests where the URI contains %-encoded characters.
  * Fix two hangs related to stopping playback of broken audio streams where